# PFC

./: .gitignore  README.md
PFCRobot_description/: CMakeLists.txt  package.xml
PFCRobot_description/launch/: PFCRobot.launch
PFCRobot_description/urdf/: PFCRobot.urdf.xacro
ROS2/: README-ROS2.md
SVTRP1/moveit_config/: .setup_assistant  package.xml
SVTRP1/robot_description/: CMakeLists.txt  package.xml
SVTRP1/robot_gazebo/: CMakeLists.txt  package.xml
SVTRP1/robot_gazebo/launch/: control_position_velocity_robot_description.launch.py  main.launch.xml  spawn_robot_description2.launch.py  spawn_robot_description_ros2_final.launch.xml  start_world.launch.py  start_world_box_room.launch.py
SVTRP1/robot_gazebo/worlds/: lab_svtrp.world  room.world  svtrp.world
new_arm_ws/: INSTRUCTIONS.txt
new_arm_ws/install/: local_setup.sh  setup.sh
new_arm_ws/log/: latest_build
new_arm_ws/src/: Análises de Resultados - Alcance Z Paralelo.csv  Análises de Resultados - Alcance Z Perpendicular.csv  Kinematics.py  Kinematics_Base.py  Kinematics_Cartesian.py  Kinematics_Cylindric_Above.py  Kinematics_Cylindric_Parallel.py  Kinematics_Parallel_Link.py  PickAndPlace_FromAbove.py
pfc_ws/: build.bashrc  setup.bashrc
pfc_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pfc_ws/log/: latest_build  latest_list  latest_test
pfc_ws/src/: move.bashrc  spawn.bashrc
robot_arm_urdf/urdf/: robot_arm_urdf.urdf
wenis_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
wenis_ws/log/: latest_build  latest_list
wenis_ws/src/: move.bashrc  (+1 more)
(+2457 files in other folders)
